force-app/main/default/objects/Purchase_Order__c/fields/Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Approved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Purchase_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>