force-app/main/default/objects/Purchase_Order__c/fields/Number_of_Items__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Items__c</fullName>
    <label>Number of Items</label>
    <summaryForeignKey>PO_Line_Items__c.Purchase_Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>