force-app/main/default/objects/Purchase_Order__c/fields/Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms__c</fullName>
    <label>Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NET 15</fullName>
            </value>
            <value>
                <fullName>NET 30</fullName>
            </value>
            <value>
                <fullName>Cashhon Devliery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>