force-app/main/default/objects/Purchase_Order__c/fields/Suplier_s_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Suplier_s_Invoice__c</fullName>
    <label>Suplier&apos;s Invoice</label>
    <length>40</length>
    <type>Text</type>
</CustomField>