force-app/main/default/objects/Purchase_Order__c/fields/Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost__c</fullName>
    <label>Total Cost</label>
    <summarizedField>PO_Line_Items__c.Unit_Price__c</summarizedField>
    <summaryForeignKey>PO_Line_Items__c.Purchase_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>