force-app/main/default/objects/Purchase_Order__c/fields/WareHouse__c.field-meta.xml
<CustomField>
    <fullName>WareHouse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WareHouse</label>
    <referenceTo>WareHouse__c</referenceTo>
    <relationshipLabel>Purchase Orders</relationshipLabel>
    <relationshipName>Purchase_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>