force-app/main/default/objects/Purchase_Order__c/validationRules/Approval_User.validationRule-meta.xml
<ValidationRule>
    <fullName>Approval_User</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL( Status__c , &quot;Approved&quot;) , 
ISBLANK( Approved_By__c ) )</errorConditionFormula>
    <errorMessage>Approved By must be filled when Status is Approved</errorMessage>
</ValidationRule>