force-app/main/default/objects/Purchase_Order__c/validationRules/Approval_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Approval_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Status__c , &quot;Approved&quot;) ,
  OR( ISBLANK(  Approved_By__c ) ,
     ISBLANK( Approved_Date__c ) ) )</errorConditionFormula>
    <errorMessage>If status is approved , approved date or approved user name is required</errorMessage>
</ValidationRule>