force-app/main/default/objects/Purchase_Order__c/validationRules/Invoice_Reference.validationRule-meta.xml
<ValidationRule>
    <fullName>Invoice_Reference</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
   ISBLANK( Invoice_Reference__c ),
    ISPICKVAL(Status__c, &quot;Approved&quot;)
)</errorConditionFormula>
    <errorMessage>Invoice reference should be  entered after PO is approved.</errorMessage>
</ValidationRule>