force-app/main/default/objects/Purchase_Order__c/validationRules/Payment_Terms.validationRule-meta.xml
<ValidationRule>
    <fullName>Payment_Terms</fullName>
    <active>true</active>
    <errorConditionFormula>AND(  TEXT(CurrencyIsoCode)  &lt;&gt; &quot;USD&quot;,
         ISBLANK(   TEXT( Payment_Terms__c )))</errorConditionFormula>
    <errorMessage>Payment Terms are required for international purchase orders</errorMessage>
</ValidationRule>