force-app/main/default/objects/Purchase_Order__c/validationRules/Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Status</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Status__c , &quot;Received&quot;) , Total_Quantity__c = 0)</errorConditionFormula>
    <errorMessage>You cannot mark this PO as &quot;Received&quot; unless at least one item has been received.</errorMessage>
</ValidationRule>