force-app/main/default/objects/Purchase_Order__c/validationRules/Status_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( PRIORVALUE(Status__c) , &quot;Closed&quot;) ,
 OR(
     ISPICKVAL(Status__c,&quot;Ordered&quot;) ,
     ISPICKVAL(Status__c,&quot;Approved&quot;)
)
)</errorConditionFormula>
    <errorMessage>You cannot move a closed Purchase Order back to an earlier status.</errorMessage>
</ValidationRule>