force-app/main/default/objects/Purchase_Order__c/validationRules/Supplier.validationRule-meta.xml
<ValidationRule>
    <fullName>Supplier</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Status__c , &quot;Approved&quot;) ,
    ISBLANK( Supplier__c  )
)</errorConditionFormula>
    <errorMessage>Supplier is required before submitting the Purchase Order</errorMessage>
</ValidationRule>