force-app/main/default/objects/Purchase_Order__c/validationRules/Total_Cost.validationRule-meta.xml
<ValidationRule>
    <fullName>Total_Cost</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
     OR( 
           ISPICKVAL(  Status__c  , &quot;Approved&quot;),
           ISPICKVAL(  Status__c  , &quot;Received&quot;)

 ) ,

 OR(
 Total_Cost__c &lt;= 0,
ISBLANK(Total_Cost__c )
)



 )</errorConditionFormula>
    <errorMessage>Total cost must be greater than 0 for Approved or Received POs.</errorMessage>
</ValidationRule>